--- a/assets/sass/_definitions.sass
+++ b/assets/sass/_definitions.sass
@@ -1,7 +1,22 @@
-.definitions
-    @include popin
-
 .definition
-    display: none
-    &.is-active
-        display: block
+    color: white
+    background: black
+    padding: px2rem(50)
+    position: relative
+    .close
+        border: 1px solid white
+    h2
+        color: $orange
+        font-size: px2rem(50)
+        font-weight: bold
+        font-style: normal
+        text-align: center
+        &::before
+            content: ''
+            display: block
+            background-image: url(/assets/images/coin/coin.png)
+            background-size: 100% 100%
+            width: 64px
+            height: 64px
+            margin: auto
+            transform: rotate(25deg)
