--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -2,9 +2,9 @@
   0%
     background-position: 0 0
   50%
-    background-position: 41px -20px
+    background-position: 30px -20px
   100%
-    background-position: 83px 0
+    background-position: 60px 0
 
 .game-container
   position: fixed
@@ -16,125 +16,13 @@
   inset: 0
   background-image: url('/assets/images/sea/pattern-sea.png')
   background-size: 30px
-  animation: 3s sea infinite ease-in-out
+  animation: 3s sea infinite
   z-index: 1
   &:not(:target)
     opacity: 0
     pointer-events: none
-  canvas, #pop-in-city
+  canvas, .popin--offcanvas
     transition: 0.5s transform ease-in-out
-
-#pop-in-city
-  position: absolute
-  display: block
-  background-color: $background-color
-  padding: 50px
-  inset: 30px
-  font-size: 22px
-  font-weight: normal
-  z-index: 5
-  overflow-y: scroll
-  scroll-behavior: smooth
-  &.active
-    display: block
-  .subtitle
-    color: $orange
-    font-size: px2rem(50)
-    font-weight: bold
-    font-style: normal
-  .baseline
-    font-size: px2rem(32)
-    font-style: italic
-    margin: px2rem(30) 0
-  p
-    margin-top: 30px
-  .close 
-    cursor: pointer
-    position: fixed
-    top: 10px
-    right: 20px
-    width: 40px
-    height: 40px
-    border: 1px solid #000
-    border-radius: 50%
-    transition: all 200ms
-    font-size: px2rem(30)
-    text-decoration: none
-    text-align: center
-  blockquote
-    position: relative
-    font-style: italic
-    font-size: px2rem(32)
-    margin: px2rem(50) 0 px2rem(20) 0
-    &::after,
-    &::before
-      position: relative
-      font-size: px2rem(80)
-      font-style: italic
-      display: block
-      line-height: px2rem(80)
-    &::after,
-      content: "”"
-    &::before
-      content: "“"
-      margin-bottom: px2rem(-45)
-
-  @include media-breakpoint-down($md)
-    display: none
-    &.active
-      display: block
-
-  @include media-breakpoint-up($md)
-    max-width: 600px
-    width: 60%
-    top: 0
-    bottom: 0
-    left: auto
-    right: 0
-    transform: translateX(100%)
-    &.active
-      transform: translateX(0)
-
-#pop-in-coin
-  position: absolute
-  display: none
-  color: white
-  background-color: #000000
-  padding: 50px
-  inset: 30px
-  max-width: 500px
-  margin: 0 auto
-  z-index: 5
-  overflow-y: scroll
-  &.active
-    display: block
-  .close 
-    cursor: pointer
-    position: absolute
-    color: white
-    top: 20px
-    right: 20px
-    width: 40px
-    height: 40px
-    border: 1px solid white
-    border-radius: 50%
-    transition: all 200ms
-    font-size: px2rem(30)
-    text-decoration: none
-    text-align: center
-  .subtitle
-    color: $orange
-    font-size: px2rem(50)
-    font-weight: bold
-    font-style: normal
-    text-align: center
-  img.image
-    transform: rotate(25deg)
-    width: 64px
-    height: 64px
-    justify-content: center
-    margin-left: 40%
-
 
 .game-dialog
   background: black
@@ -184,20 +72,18 @@
     &::before
       content: 'Visiter ↓'
 
-body.pop-in-city--opened,
-body.is-popin-closing
+body.offcanvas-is-opened,
+body.offcanvas-is-closing
   .game-dialog
     transition-duration: 0.1s
     transition-timing-function: ease-in-out
     opacity: 0
 
-body.pop-in-city--opened
+body.offcanvas-is-opened
   @include media-breakpoint-up($md)
     #game
       canvas
-        transform: translateX(-100px)
-
-  
+        transform: translateX(-250px)
 
 .game-ui
   position: fixed
