--- a/assets/sass/_typography.sass
+++ b/assets/sass/_typography.sass
@@ -5,8 +5,9 @@ body
 h1, .h1
     font-size: px2rem(50)
     font-weight: bold
-    text-align: center
+    font-style: normal
     color: $orange
+    margin-bottom: px2rem(50)
     @include media-breakpoint-up($md)
         font-size: px2rem(80)
 
@@ -14,8 +15,13 @@ h2, .h2
     font-size: px2rem(40)
     font-style: italic
     line-height: 1.2
+    margin-bottom: px2rem(40)
     @include media-breakpoint-up($md)
         font-size: px2rem(42)
+
+h3, .h3
+    font-size: px2rem(32)
+    font-style: italic
 
 p
     font-size: px2rem(22)
@@ -34,3 +40,22 @@ a
     text-decoration: none
     padding: px2rem(12) px2rem(32)
     background: $orange
+
+blockquote
+    font-style: italic
+    font-size: px2rem(32)
+    padding: px2rem(40) 0 
+    position: relative
+    &::after,
+    &::before
+        font-size: px2rem(80)
+        line-height: px2rem(80)
+        // font-style: italic
+        display: block
+        position: absolute
+    &::after,
+        content: "”"
+        bottom: -px2rem(48)
+    &::before
+        content: "“"
+        top: 0
