--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,9 +1,10 @@
-@import "_reset"
-@import "_utils"
-@import "_variables"
-@import "_fonts"
-@import "_typography"
-@import "_commons"
-@import "_definitions"
-@import "_home"
-@import "_game"
+@import "reset"
+@import "utils"
+@import "variables"
+@import "fonts"
+@import "typography"
+@import "commons"
+@import "cities"
+@import "definitions"
+@import "home"
+@import "game"
