--- a/assets/sass/_definitions.sass
+++ b/assets/sass/_definitions.sass
@@ -3,6 +3,8 @@
     background: black
     padding: px2rem(50)
     position: relative
+    max-height: 70vh
+    overflow-y: auto
     .close
         border: 1px solid white
     h2
